--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.12",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
@@ -28,8 +29,10 @@
         "datatables.net-bs": "^1.10.21",
         "datatables.net-buttons": "^1.6.2",
         "imask": "^6.1.0",
+        "laravel-vue-pagination": "^2.3.1",
         "metismenu": "^3.0.6",
         "select2": "^4.0.13",
-        "sweetalert": "^2.1.2"
+        "sweetalert": "^2.1.2",
+        "vue-router": "^3.5.3"
     }
 }
